# Trace-driven-CPU-and-Memory-System-Simulator

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: branch_predictor.hpp  cache.hpp  core_simulator.hpp  simulator_config.hpp  stats.hpp  trace_instruction.hpp  trace_reader.hpp
scripts/: generate_sample_traces.py  run_experiments.py
src/: branch_predictor.cpp  cache.cpp  core_simulator.cpp  main.cpp  stats.cpp  trace_reader.cpp
tests/: test_branch_predictor.cpp  test_cache.cpp  test_framework.hpp  test_main.cpp  test_simulator.cpp  test_trace_reader.cpp
traces/: branchy.trace  conflict.trace  mixed.trace  streaming.trace
